<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/button_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                facebook:com_facebook_login_text="@string/action_signup_with_facebook"
                facebook:com_facebook_logout_text="@string/action_signup_with_facebook" />

            <LinearLayout
                android:id="@+id/facebook_auth_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@color/content_page"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/labelAuthorizationViaFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_authorization_via_facebook" />

                <TextView
                    android:id="@+id/button_regular_auth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/action_regular_signup"
                    android:textColor="@color/light_blue" />
            </LinearLayout>


            <EditText
                android:id="@+id/username_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:paddingLeft="10dp"
                android:background="@drawable/round_corner_edittext"
                android:hint="@string/event_name_place_holder"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/fullname_edit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:paddingLeft="10dp"
                android:background="@drawable/round_corner_edittext"
                android:hint="@string/event_place_placeholder"
                android:inputType="text"
                 />

            <EditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:paddingLeft="10dp"
                android:background="@drawable/round_corner_edittext"
                android:hint="@string/event_description"
                android:inputType="text"
                 />

            <TextView
                android:id="@+id/event_mela"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:gravity="center|left"
                android:background="@drawable/round_corner_edittext"
                android:hint="@string/select_event_mela_placeholder"
                android:textSize="16sp"
                android:visibility="visible" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event_image"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center|left"
                android:background="@drawable/round_corner_edittext"
                android:hint="@string/select_event_image_palceholder"
                android:textSize="16sp"
                android:visibility="visible" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="centerCrop"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:layout_toRightOf="@+id/event_image"
                    android:id="@+id/imv_event"
                    android:src="@drawable/img_loading"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/event_date"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:gravity="center|left"
                android:background="@drawable/round_corner_edittext"
                android:hint="@string/select_event_date"
                android:textSize="16sp"
                android:visibility="visible" />


            <Button
                android:id="@+id/button_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_corner_button"
                android:padding="5dp"
                android:text="@string/create_event"
                android:textColor="@color/clr_FF9800"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>