<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ru.ifsoft.network.LoginFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bk">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                facebook:com_facebook_login_text="@string/action_login_with_facebook"
                facebook:com_facebook_logout_text="@string/action_login_with_facebook" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/header_img" />

            <EditText
                android:id="@+id/signinUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/place_holder_mobile_no"
                android:inputType="phone"
                android:maxLength="24" />

            <EditText
                android:id="@+id/signinPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:maxLength="20" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/otpLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/str_otp"
                    android:textColor="@color/clr_FF9800"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/action_forgot_password"
                    android:textColor="@color/clr_FF9800"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/signinBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/arrow_n"
                android:padding="5dp"
                android:text="@string/action_login"
                android:textColor="@color/clr_FF9800"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:text="@string/create_account"
                android:textColor="@color/clr_FF9800"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>