<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/header_img" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/register_screen_2_title"
           android:textSize="20sp"
            android:textColor="@color/gray_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/register_screen_2_subtitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/photoContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/photo_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/spacing_middle"
                android:src="@drawable/profile_default_photo"
                app:civ_border="true"
                app:civ_border_color="@color/white"
                app:civ_border_width="3dp"
                app:civ_shadow="false"
                app:civ_shadow_radius="0" />

        </LinearLayout>

        <Button
            android:id="@+id/button_choose_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_corner_button"
            android:padding="10dp"
            android:stateListAnimator="@null"
            android:text="@string/action_choose_photo"
            android:textColor="@color/clr_FF9800"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>